--- a/CODE/UI/Monopoly-electronic-UI/platformio.ini
+++ b/CODE/UI/Monopoly-electronic-UI/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = emulator_64bits
+default_envs = esp32_boards 
 
 ; Shared options
 [env]
