--- a/CODE/UI/v2/platformio.ini
+++ b/CODE/UI/v2/platformio.ini
@@ -1,22 +1,31 @@
 ; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+; Monopoly Electronic V2
 
 [env:esp32-s3-devkitc-1]
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
-lib_deps =
-    ; lvgl/lvgl@^9.4.0
-    adafruit/Adafruit GFX Library@^1.12.3
-    adafruit/Adafruit ST7735 and ST7789 Library@^1.11.0
-
-build_flags = -DLV_CONF_INCLUDE_SIMPLE
 monitor_speed = 115200
 upload_speed = 921600
+
+lib_deps =
+    bodmer/TFT_eSPI@^2.5.43
+    adafruit/Adafruit PN532@^1.3.3
+
+build_flags =
+    ; --- TFT_eSPI display config ---
+    -DUSER_SETUP_LOADED=1
+    -DST7789_DRIVER=1
+    -DTFT_WIDTH=240
+    -DTFT_HEIGHT=320
+    -DTFT_MISO=13
+    -DTFT_MOSI=11
+    -DTFT_SCLK=12
+    -DTFT_CS=14
+    -DTFT_DC=16
+    -DTFT_RST=38
+    -DTOUCH_CS=17
+    -DSPI_FREQUENCY=40000000
+    -DSPI_TOUCH_FREQUENCY=2500000
+    ; --- ESP32-S3 ---
+    -DARDUINO_USB_CDC_ON_BOOT=1
