fix text not displaying

--- a/CODE/UI/v2/platformio.ini
+++ b/CODE/UI/v2/platformio.ini
@@ -27,5 +27,16 @@ build_flags =
     -DTOUCH_CS=17
     -DSPI_FREQUENCY=40000000
     -DSPI_TOUCH_FREQUENCY=2500000
+    ; --- TFT_eSPI font loading (required with USER_SETUP_LOADED) ---
+    -DLOAD_GLCD=1
+    -DLOAD_FONT2=1
+    -DLOAD_FONT4=1
+    -DLOAD_FONT6=1
+    -DLOAD_FONT7=1
+    -DLOAD_FONT8=1
+    -DLOAD_GFXFF=1
+    -DSMOOTH_FONT=1
     ; --- ESP32-S3 ---
     -DARDUINO_USB_CDC_ON_BOOT=1
+    ; --- Debug ---
+    -DDEBUG=1
