--- a/CODE/UI/v2/.vscode/settings.json
+++ b/CODE/UI/v2/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "C_Cpp.default.compilerPath": "/home/pegoku/.platformio/packages/toolchain-xtensa-esp32s3/bin/xtensa-esp32s3-elf-gcc"
+    "C_Cpp.default.compilerPath": "/home/pegoku/.platformio/packages/toolchain-xtensa-esp32s3/bin/xtensa-esp32s3-elf-gcc",
+    "chat.tools.terminal.autoApprove": {
+        "pio": true
+    }
 }
