--- a/CODE/UI/v2/platformio.ini
+++ b/CODE/UI/v2/platformio.ini
@@ -11,9 +11,10 @@ upload_speed = 921600
 lib_deps =
     bodmer/TFT_eSPI@^2.5.43
     adafruit/Adafruit PN532@^1.3.3
+    lvgl/lvgl@^9
 
 build_flags =
-    ; --- TFT_eSPI display config ---
+    ; --- TFT_eSPI display config (used as LVGL backend) ---
     -DUSER_SETUP_LOADED=1
     -DST7789_DRIVER=1
     -DTFT_WIDTH=240
@@ -27,15 +28,18 @@ build_flags =
     -DTOUCH_CS=17
     -DSPI_FREQUENCY=40000000
     -DSPI_TOUCH_FREQUENCY=2500000
-    ; --- TFT_eSPI font loading (required with USER_SETUP_LOADED) ---
-    -DLOAD_GLCD=1
-    -DLOAD_FONT2=1
-    -DLOAD_FONT4=1
-    -DLOAD_FONT6=1
-    -DLOAD_FONT7=1
-    -DLOAD_FONT8=1
-    -DLOAD_GFXFF=1
-    -DSMOOTH_FONT=1
+    ; --- LVGL (skip lv_conf.h, configure via build flags) ---
+    -DLV_CONF_SKIP
+    -DLV_COLOR_DEPTH=16
+    -DLV_FONT_MONTSERRAT_12=1
+    -DLV_FONT_MONTSERRAT_14=1
+    -DLV_FONT_MONTSERRAT_16=1
+    -DLV_FONT_MONTSERRAT_20=1
+    -DLV_FONT_MONTSERRAT_24=1
+    -DLV_FONT_MONTSERRAT_28=1
+    -DLV_USE_LOG=1
+    -DLV_LOG_PRINTF=1
+    -DLV_THEME_DEFAULT_DARK=1
     ; --- ESP32-S3 ---
     -DARDUINO_USB_CDC_ON_BOOT=1
     ; --- Debug ---
